# twitter-media-downloader

./: .gitignore  README.md  components.json  next.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cookies.rs  lib.rs  main.rs  twitter.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: download-provider.tsx  media-card.tsx  theme-provider.tsx  toggle-theme-button.tsx
src/components/ui/: checkbox.tsx  dialog.tsx  field.tsx  input-group.tsx  sonner.tsx
src/lib/: media.ts  semaphore.ts
