[package]
name = "twitter-media-downloader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "twitter_media_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
urlencoding = "2"
rand = "0.8"
thiserror = "2"
# Browser cookie import (read X auth cookies from installed browsers).
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
# DPAPI (CryptUnprotectData) to unwrap the Chromium cookie-encryption key.
windows = { version = "0.61", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

